# Docker_Practice

./: .gitignore
docker_practice_1/: Dockefile
docker_practice_1/logs/scheduler/: latest
docker_practice_2/airflow/: docker-compose.yaml  pyproject.toml  requirements.txt  test_function.py
docker_practice_2/airflow/dags/: test_dag.py
docker_practice_2/airflow/logs/scheduler/: latest
docker_practice_2/flask-web/: Dockerfile  pyproject.toml  requirements.txt
docker_practice_2/flask-web-db/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  test.db
docker_practice_2/flask-web-db/src/: app.py  config.py
docker_practice_2/flask-web-db/src/migrations/versions/: 2dd6677011b5_.py  d7ad47ee78dd_.py
docker_practice_2/flask-web-db/src/model/: model.py
docker_practice_2/flask-web-db/src/templates/: api.html  base.html
