[tool.poetry]
name = "flask-web-db"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyMySQL = "^1.0.2"
Flask = "^2.0.1"
mysqlclient = "^2.0.3"
mysql-connector-python = "^8.0.26"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
